# rules_cc_toolchain

./: .bazelrc  LICENSE  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-rules_cc_toolchain  bazel-testlogs  ci.bazelrc  install_presubmit.sh  rules_cc_toolchain_deps.bzl
.githooks/: mandate-conventional-changelog.sh  post-commit  post-rewrite  pre-push
.github/: bors.toml
.github/workflows/: blank.yml  ci.yml
cc_toolchain/: BUILD.bazel  cc_toolchain.bzl  cc_toolchain_import.bzl  sysroot.bzl  toolchain_config.bzl
cc_toolchain/features/: BUILD.bazel  features.bzl
cc_toolchain/transitions/: platform_transition.bzl
cc_toolchain/wrappers/: BUILD
cc_toolchain/wrappers/clang/posix/: BUILD  ar  cpp  gcc  gcov  ld  llvm-cov  nm  objcopy  objdump  strip
cc_toolchain/wrappers/clang/windows/: BUILD
cc_toolchain/wrappers/posix/: BUILD  ar  cpp  gcc  gcov  ld  llvm-cov  nm  objcopy  objdump  strip
cc_toolchain/wrappers/windows/: ar.bat  cpp.bat  gcc.bat  gcov.bat  ld.bat  nm.bat  objcopy.bat  objdump.bat  strip.bat
config/: BUILD.bazel  rules_cc_toolchain_config.BUILD  rules_cc_toolchain_config_repository.bzl
tests/: BUILD.bazel  c_only.c  dereferencing_null_pointer.cc  dummy_test2.cc  hello_world.cc  test_arch_output.bzl  test_arch_output.sh  uses_double_precision_floating_point.c  uses_single_precision_floating_point.c
tools/cc_toolchain_import/: defs.bzl  features.bzl
tools/clang_tidy/: .clang-tidy  BUILD.bazel  README.md  clang_tidy.bzl
