load("//cc_toolchain:cc_toolchain_import.bzl", "cc_toolchain_import")

package(
    default_visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

alias(
    name = "libc_multiplexer",
    actual = select({
        ":linux_x86_64": "@debian_stretch_amd64_sysroot//:glibc",
    }),
)

alias(
    name = "libunwind_multiplexer",
    actual = select({
        # TODO: Explore using llvm-libunwind statically linked.
        ":linux_x86_64": "@debian_stretch_amd64_sysroot//:gcc",
    }),
)

alias(
    name = "libc++_multiplexer",
    actual = select({
        ":linux_x86_64": "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:llvm_libcxx",
    }),
)

alias(
    name = "libc++abi_multiplexer",
    actual = select({
        ":linux_x86_64": "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:llvm_libcxx_abi",
    }),
)

alias(
    name = "libclang_rt_multiplexer",
    actual = select({
        ":linux_x86_64": "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:llvm_libclang_rt",
    }),
)

# This is a placeholder to signify an empty dependency.
cc_toolchain_import(
    name = "empty",
)
