load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_binary(
    name = "hello_world",
    srcs = ["hello_world.cc"],
)

# Build more than one test to ensure that code coverage is generated.
cc_test(
    name = "dummy_test1",
    srcs = ["dummy_test1.cc"],
)

cc_test(
    name = "dummy_test2",
    srcs = ["dummy_test2.cc"],
)
